web_custom_label: add active field (TA#5062)

--- a/web_custom_label/views/custom_label.xml
+++ b/web_custom_label/views/custom_label.xml
@@ -12,6 +12,7 @@
                 <field name="reference" string="Field"/>
                 <field name="position"/>
                 <field name="term"/>
+                <field name="active"/>
             </tree>
         </field>
     </record>
