--- a/google_attachment/static/src/scss/sidebar.scss
+++ b/google_attachment/static/src/scss/sidebar.scss
@@ -1,10 +1,10 @@
 // Add styles for the `From Google ...` button.
 .o_sidebar_add_from_google {
     padding: 3px 25px;
-    color: @btn-default-color;
+    color: $o-brand-primary;
 
     &:hover {
-        background-color: @table-bg-hover;
+        background-color: $dropdown-link-hover-bg;
     }
 
     span:after {
