Revert "Port web addons to odoo 12.0 (#30)"
This reverts commit fca7cb15d3d9b40dc36a4b2fead7129f0548f93f.

--- a/google_attachment/static/src/less/sidebar.less
+++ b/google_attachment/static/src/less/sidebar.less
@@ -1,10 +1,10 @@
 // Add styles for the `From Google ...` button.
 .o_sidebar_add_from_google {
     padding: 3px 25px;
-    color: $o-brand-primary;
+    color: @btn-default-color;
 
     &:hover {
-        background-color: $dropdown-link-hover-bg;
+        background-color: @table-bg-hover;
     }
 
     span:after {
