--- a/google_attachment/views/res_config_settings.xml
+++ b/google_attachment/views/res_config_settings.xml
@@ -10,6 +10,7 @@
             <div name="integration" position="inside">
                 <div class="col-xs-12 col-md-6 o_setting_box">
                     <div class="o_setting_right_pane">
+                        <label string="Attachments From Google Drive"/>
                         <div class="mt16 row">
                             <label for="google_attachment_client_id" class="col-md-3 o_light_label"/>
                             <field name="google_attachment_client_id"/>
