--- a/web_contextual_search_favorite/views/assets.xml
+++ b/web_contextual_search_favorite/views/assets.xml
@@ -6,6 +6,7 @@
             <script type="text/javascript" src="/web_contextual_search_favorite/static/dist/webContextualSearchFavorite.js"></script>
             <script type="text/javascript" src="/web_contextual_search_favorite/static/src/js/FavoriteMenu.js"></script>
             <script type="text/javascript" src="/web_contextual_search_favorite/static/src/js/pyeval.js"></script>
+            <script type="text/javascript" src="/web_contextual_search_favorite/static/src/js/dashboard.js"></script>
         </xpath>
     </template>
 
