Allow to hide a selection field item

--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -10,6 +10,9 @@
                 <field name="type_"/>
                 <field name="reference" string="Field"/>
                 <field name="modifier"/>
+                <field name="key"
+                    attrs="{'readonly': [('modifier', '!=', 'selection_hide')],
+                            'required': [('modifier', '=', 'selection_hide')]}"/>
                 <field name="active"/>
             </tree>
         </field>
