TA#30318 exclude user groups on custom modifiers

--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -13,6 +13,7 @@
                 <field name="key"
                     attrs="{'readonly': [('modifier', '!=', 'selection_hide')],
                             'required': [('modifier', '=', 'selection_hide')]}"/>
+                <field name="excluded_group_ids" widget="many2many_tags"/>
                 <field name="active"/>
             </tree>
         </field>
