--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -11,7 +11,7 @@
                 <field name="reference" string="Field"/>
                 <field name="modifier"/>
                 <field name="key"
-                    attrs="{'readonly': [('modifier', '!=', 'selection_hide')],
+                    attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget'))],
                             'required': [('modifier', '=', 'selection_hide')]}"/>
                 <field name="excluded_group_ids" widget="many2many_tags"/>
                 <field name="active"/>
