TA#43343 add new feature to web_custom_modifier module

--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -11,8 +11,8 @@
                 <field name="reference" string="Field"/>
                 <field name="modifier"/>
                 <field name="key"
-                    attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget'))],
-                            'required': [('modifier', '=', 'selection_hide')]}"/>
+                    attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget', 'limit'))],
+                            'required': [('modifier', 'in', ('selection_hide', 'limit'))]}"/>
                 <field name="excluded_group_ids" widget="many2many_tags"/>
                 <field name="active"/>
             </tree>
