--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -11,7 +11,7 @@
                 <field name="reference" string="Field"/>
                 <field name="modifier"/>
                 <field name="key"
-                    attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget', 'limit'))],
+                       attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget', 'limit'))],
                             'required': [('modifier', 'in', ('selection_hide', 'limit'))]}"/>
                 <field name="excluded_group_ids" widget="many2many_tags"/>
                 <field name="active"/>
@@ -42,7 +42,7 @@
         <field name="name">Custom Modifiers</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">web.custom.modifier</field>
-        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
         <field name="view_id" ref="custom_modifier_list"/>
     </record>
     <menuitem action="custom_modifier_action" id="custom_modifier_menu" parent="base.next_id_2" sequence="99"/>
