TA#48027 [ADD]website_login_as

--- a/website_login_as/views/res_users_view.xml
+++ b/website_login_as/views/res_users_view.xml
@@ -10,6 +10,9 @@
                 </sheet>
                 <footer>
                     <button name="login_as" type="object" string="Access to website" class="oe_highlight"/>
+                    <button name="logout_as" type="object" string="Logout as" class="oe_highlight"
+                            attrs="{'invisible': [('login_as_user_id', '=', False)]}"
+                    />
                 </footer>
             </form>
         </field>
