--- a/web_hide_db_manager_link/views/webclient_templates.xml
+++ b/web_hide_db_manager_link/views/webclient_templates.xml
@@ -4,8 +4,14 @@
      © 2023 Numigi (tm) and all its contributors (https://bit.ly/numigiens)
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
-    <template id="login_layout_no_db" inherit_id="web.login_layout" name="Login Layout">
+    <template id="login_layout_no_db" inherit_id="web.login_layout" name="Login Layout  No Database Manager">
         <xpath expr="//t/div[1]" position="before">
+            <t t-set="disable_database_manager" t-value="1"/>
+        </xpath>
+    </template>
+
+    <template id="login_no_db" inherit_id="web.login" name="Login No Database Manager">
+        <xpath expr="//form" position="before">
             <t t-set="disable_database_manager" t-value="1"/>
         </xpath>
     </template>
