--- a/web_editor_backend_context/views/assets.xml
+++ b/web_editor_backend_context/views/assets.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <template id="assets_backend" name="assets_backend" inherit_id="web.assets_backend">
+    <template id="assets_wysiwyg" name="Wysiwyg Editor Assets" inherit_id="web_editor.assets_wysiwyg">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/web_editor_backend_context/static/src/js/context.js"></script>
         </xpath>
