--- a/web_custom_modifier/views/web_custom_modifier.xml
+++ b/web_custom_modifier/views/web_custom_modifier.xml
@@ -12,7 +12,7 @@
                 <field name="modifier"/>
                 <field name="key"
                        attrs="{'readonly': [('modifier', 'not in', ('selection_hide', 'widget', 'limit', 'optional'))],
-                            'required': [('modifier', 'in', ('selection_hide', 'limit'))]}"/>
+                            'required': [('modifier', 'in', ('selection_hide', 'limit', 'optional'))]}"/>
                 <field name="excluded_group_ids" widget="many2many_tags"/>
                 <field name="active"/>
             </tree>
